example/hpa-demo/cic-vpx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-vpx
  labels:
    app: cic-vpx
spec: 
      serviceAccountName: citrix
      containers:
      - name: cic-vpx
        image: "`CIC_IMAGE`" 
        imagePullPolicy: Always
        args:
          - --default-ssl-certificate
            default/default-secret
          - --ingress-classes
            cic-vpx
          - --ipam
            citrix-ipam-controller
