example/hpa-demo/cpx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-builtin
  labels:
    app: cpx-builtin
spec:
  selector:
    matchLabels:
      app: cpx-builtin
  replicas: 1
  template:
    metadata:
      name: cpx-builtin
      labels:
        app: cpx-builtin
      annotations:
    spec:
      serviceAccountName: citrix
      containers:
        - name: cpx
          image: "`CPX_IMAGE`"
          securityContext:
             privileged: true
          imagePullPolicy: Always
          ports:
          - containerPort: 9080
          - containerPort: 9443
        # Add cic as a sidecar
        - name: cic
          image: "`CIC_IMAGE`"
          args:
            - --ingress-classes
              builtin-hostport
            - --default-ssl-certificate
              default/default-secret
          imagePullPolicy: Always
        - name: exporter
          image: "`EXPORTER`"
          args:
            - "--target-nsip=127.0.0.1"
            - "--port=8888"
            - "--secure=no"
          imagePullPolicy: IfNotPresent
---
kind: Service
apiVersion: v1
metadata:
  name: cpx-builtin
  labels:
    app: cpx-builtin
spec:
  selector:
    app: cpx-builtin
  ports:
  - name: port-1
    port: 9080
    targetPort: 9080
  - name: port-2
    port: 9443
  - name: port-3
    port: 8888
  - name: port-4
    port: 6080
  - name: port-5
    port: 6443
