example/hpa-demo/ingress_builtin_hostport.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/insecure-port: '6080'
  name: web-ingress
spec:
  ingressClassName: builtin-hostport
  rules:
  - host: frontend.org
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /web-frontend/frontend.php
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: builtin-hostport
spec:
  controller: citrix.com/ingress-controller
---
