example/hpa-demo/ingress_cpx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/insecure-port: '6080'
  name: guestbook-ingress
spec:
  ingressClassName: builtin-hostport
  rules:
  - host: www.guestbook.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: builtin-hostport
spec:
  controller: citrix.com/ingress-controller
---
